# fabm-oxypom

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  ChangeLog.md  Equations  LICENSE.md  Makefile  Model parameters  README.md  ReadMe.md  State variable  codemeta.json  dobgcp.F90  dobgcp_model_library.F90
.docker/: Dockerfile-fabm  Dockerfile-pandoc  Makefile
.github/: dependabot.yaml
.github/workflows/: cmake-multi-platform.yaml  cmake-multi-platform.yml  fabm.yaml  gotm.yaml  r.yml
.gitlab/: fabm.yaml  joss.yaml  license.yaml  pandoc.yaml  r.yaml  zenodo.yaml
.reuse/: dep5
diamo/: diamo.F90
doc/contributing/: ReadMe.md  coding_standard.md  contributing-license.md
doc/joss/: .gitignore  Makefile  ReadMe.md  figure1.pdf.license  joss-template.tex  joss_banner_title.png.license  logo_large.jpg.license  paper.bib  paper.md
oxypom/: oxypom.F90
python/: reuse2txt.py
src/: CMakeLists.txt  dobgcp_model_library.F90  oxypom_model_library.F90
src/diamo/: README.md  diamo.F90
src/light/: light.F90
src/oxypom/: README.md  oxypom.F90
testcase/: DOC.txt  POC.txt  PON and DON.txt  POP and DOP.txt  alg-carbon.txt  ammonia.txt  fabm.dobgcp.yaml  flow.txt  nitrate.txt  original.rivers.u_020e-2.nc  oxygen.txt  phosphorus.txt  river_bgc_forcing.R  rivers.u_020e-2.bgc.nc  silicon.txt  temp.txt
testcases/: ReadMe.md  fabm-installation.sh  gotm-installation.sh  run-estuary-testcase.sh  run-light-testcase.sh
testcases/estuary/: .Rhistory  README.md  ReadMe.md  fabm.yaml  get_data.sh  (+4 more)
(+29 files in other folders)
